--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mirror:set": "npm config set registry https://registry.npmmirror.com",
     "mirror:rm": "npm config rm registry",
     "backup": "git add . && git commit -m \"chore: backup\" && git push",
-    "up": "npx npm-check-updates -u"
+    "up": "npx npm-check-updates -u",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@bassist/utils": "^0.9.0",
@@ -36,6 +37,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
+    "husky": "^8.0.3",
     "less": "^4.1.3",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
